@@ -32,20 +32,27 @@
       <licence tarname="mpfr-%-mingw32-lic.tar.lzma" />
 
       <component class="dev">
-        <release tarname="mpfr-3.1.5-2-mingw32-dev.tar.xz" />
-        <requires eq="mingw32-libmpfr-%-mingw32-dll-4.tar" />
+        <release tarname="mpfr-4.0.2-1-mingw32-dev.tar.xz">
+          <requires eq="mingw32-libmpfr-%-mingw32-dll-6.tar" />
+        </release>
+        <release tarname="mpfr-3.1.5-2-mingw32-dev.tar.xz">
+          <requires eq="mingw32-libmpfr-%-mingw32-dll-4.tar" />
+        </release>
         <requires eq="gmp-*-mingw32-dev.tar" />
       </component>
 
       <component class="doc">
+        <release tarname="mpfr-4.0.2-1-mingw32-doc.tar.xz" />
         <release tarname="mpfr-3.1.5-2-mingw32-doc.tar.xz" />
       </component>
 
       <component class="info">
+        <release tarname="mpfr-4.0.2-1-mingw32-info.tar.xz" />
         <release tarname="mpfr-3.1.5-2-mingw32-info.tar.xz" />
       </component>
 
       <component class="lic">
+        <release tarname="mpfr-4.0.2-1-mingw32-lic.tar.xz" />
         <release tarname="mpfr-3.1.5-2-mingw32-lic.tar.xz" />
       </component>
     </package>
@@ -76,6 +83,7 @@
       <licence tarname="mpfr-%-mingw32-lic.tar.lzma" />
 
       <component class="dll">
+        <release tarname="libmpfr-4.0.2-1-mingw32-dll-6.tar.xz" />
         <release tarname="libmpfr-3.1.5-2-mingw32-dll-4.tar.xz" />
         <requires eq="mingw32-libgmp-*-mingw32-dll-10.tar" />
       </component>
