@@ -1,5 +1,14 @@
 2020-03-05  Keith Marshall  <keith@users.osdn.me>
 
+	Update MPFR package set to version 4.0.2
+
+	* mingw32/mingw32-mpfr.xml (mpfr-dev): Add release reference; define
+	release specific dependencies on explicit LIBMFPR.DLL versions.
+	(mpfr-doc, mpfr-info, mpfr-lic, libmpfr-dll): Add release references.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
+2020-03-05  Keith Marshall  <keith@users.osdn.me>
+
 	Publish MinGW.org GCC-9.2 and WSL-5.3 package sets.
 
 	* mingw32/mingw32-gcc4.xml (gcc-lic, gcc-core-bin, gcc-info, gcc-man)
